# easy-lint-shell

./: .gitignore  pyproject.toml
src/dd_lint_shell/: __init__.py
src/easy_lint_shell/: __init__.py
