[project]
name = "easy-lint-shell"
dynamic = ["version"]
description = "Easy check-shell and fix-shell scripts, built on shfmt, shellcheck and reviewdog"
readme = "README.md"
authors = [{ name = "Jordan Webb", email = "jordan@dangerdevices.com" }]
requires-python = ">=3.13"
dependencies = ["git-check-ignore>=1.0.1"]

[project.scripts]
check-shell = "easy_lint_shell:check_shell"
fix-shell = "easy_lint_shell:fix_shell"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
